Assets/css/style.css
.tiny5-regular {
    font-family: "Tiny5", sans-serif;
    font-weight: 400;
    font-style: normal;
  }

* {
background-color: aquamarine;
justify-content: center;
font-family: "Tiny5", sans-serif; 
color:#175E5D;
}  

.dark * {
background-color: #175E5D;
color: aquamarine;
border-color: aquamarine;

}

#main-header {
font-family: "Tiny5", sans-serif;
font-size: 50px;
margin-top: 10px;
margin-bottom:10px; 

}

h2 {

font-family: "Tiny5", sans-serif;
font-size: 30px;

}

body {
  margin:0;
display: flex;
justify-content: center;
flex-wrap: wrap;


}

main {
width:100%;
display: flex;
flex-wrap:wrap;
flex-direction: row;

}
article {
width:45%; 
border: solid 2px;
border-color: #175E5D; 
border-radius: 20px;
text-align: center;
margin: 3px; 

.dark article {
  border-color: aquamarine;
}

}
.container {
 margin:0 auto;
 text-align: center;
 justify-content: center;
 border: 2px; 

}

